--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 </head>
 <body>
     <header class="header">
-        
+        <header>
+            <nav class="nav">
+                <div class="container">
+                    <div class="title">
+                        <a href="">
+                            <h1 class="header__title">TOTEMBO</h1>
+                        </a>
+                        <ul class="nav__menu">
+                            <li><a href="" class="header__links">Часы</a></li>
+                            <li><a href="" class="header__links">Кольца</a></li>
+                            <li><a href="" class="header__links">Серьги</a></li>
+                            <li><a href="" class="header__links">Браслеты</a></li>
+                            <li><a href="" class="header__links">Клатчи</a></li>
+                            <li><a href="" class="header__links">Цепочки</a></li>
+                        </ul>
+                    </div>
+                    <div class="right__panel">
+                        <ul class="right__panel-menu">
+                            <li><a href="" class="links header__links">RU</a></li>
+                            <li><a href="" class="links"><img src="img/like.svg" alt=""></a></li>
+                            <li><a href="" class="links"><img src="img/korzina.svg" alt=""></a></li>
+                            <li><a href="" class="links"><img src="img/people.svg" alt=""></a></li>
+                            <li><a href="" class="links"><img src="img/search.svg" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <img src="images/Rectangle96.jpg" alt="" class="rectangle">
+            </nav>
+        </header>
     </header>
     <!-- <main></main>
     <footer class="footer"></footer> -->
