--- a/index.html
+++ b/index.html
@@ -35,11 +35,56 @@
                         </ul>
                     </div>
                 </div>
-                <img src="images/Rectangle96.jpg" alt="" class="rectangle">
             </nav>
         </header>
     </header>
-    <!-- <main></main>
-    <footer class="footer"></footer> -->
+    <main>
+        <section class="top">
+            <div class="container">
+                <div class="sales__top">
+                    <div class="sales__item">
+                        <p class="procent">50%</p>
+                        <img src="img/Pierre Lannier.png" alt="">
+                        <ul class="sales__desc">
+                            <li>Мужские часы</li>
+                            <li>Pierre Lannier</li>
+                            <li>1 280 000 UZS</li>
+                        </ul>
+                    </div>
+                    <div class="sales__item">
+                        <p class="procent">50%</p>
+                        <img src="img/Diadema grand.png" alt="">
+                        <ul class="sales__desc">
+                            <li>Черная мужская серьга</li>
+                            <li class="sales__item-big">Diadema grand</li>
+                            <li>95 000 UZS</li>
+                        </ul>
+                    </div>
+                    <div class="sales__item">
+                        <p class="procent">50%</p>
+                        <img src="img/Swiss Military Chrono.png" alt="">
+                        <ul class="sales__desc">
+                            <li>Мужские часы </li>
+                            <li>Swiss Military Chrono</li>
+                            <li>1 500 000 UZS</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="liders">
+            <div class="container">
+
+                <h2 class="liders__title">Лидеры продаж</h2>
+
+                <div class="liders__block">
+                    <div class="liders__item"></div>
+                </div>
+            </div>
+        </section>
+        
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
